packages/beff-core/tests/snapshots/print_parser__tests__ok_pick.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: print_types(from)
---
--- entry.ts ---
type User = {
    name: string,
    age: number,
    email: string,
}
parse.buildParsers<{ A: Pick<User, 'age'> }>();
--------------------------------
type User = { "age": number, "email": string, "name": string };


type BuiltParsers = {
  A: { "age": number },
}
