packages/beff-core/tests/snapshots/print_parser__tests__ok_record_access.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        export type Extra = Record<string, string>;\n        type ExtraValue = Extra[string];\n\n        parse.buildParsers<{ ExtraValue: ExtraValue }>();\n      \"#)"
---
type Extra = { [key: string]: string };

type ExtraValue = string;


type BuiltParsers = {
  ExtraValue: ExtraValue,
}
