packages/beff-core/tests/snapshots/print_parser__tests__ok_record_extends.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        export type Obj1 = {a:string}\n        export type Obj2 = {a:string, b:string}\n        export type Obj3 = Obj1 extends Obj2 ? true : false\n        export type Obj4 = Obj2 extends Obj1 ? true : false\n        // expect Obj3 to be false and Obj4 to be true\n        parse.buildParsers<{ Obj3: Obj3, Obj4: Obj4 }>();\n      \"#)"
---
--- entry.ts ---
export type Obj1 = {a:string}
export type Obj2 = {a:string, b:string}
export type Obj3 = Obj1 extends Obj2 ? true : false
export type Obj4 = Obj2 extends Obj1 ? true : false
// expect Obj3 to be false and Obj4 to be true
parse.buildParsers<{ Obj3: Obj3, Obj4: Obj4 }>();
--------------------------------
type Obj1 = { "a": string };

type Obj2 = { "a": string, "b": string };

type Obj3 = false;

type Obj4 = true;


type BuiltParsers = {
  Obj3: Obj3,
  Obj4: Obj4,
}
