packages/beff-core/tests/snapshots/print_parser__tests__ok_record_union.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        export type Extra = Record<'a'|'b', string>;\n\n        parse.buildParsers<{ Extra: Extra }>();\n      \"#)"
---
type Extra = { "a"?: string; "b"?: string };
type Extra = Extra;

