packages/beff-core/tests/snapshots/print_parser__tests__ok_recursive_tuple.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        export type IX = [string, IX]\n        type IX2 = IX[0]\n        parse.buildParsers<{ IX2: IX2 }>();\n      \"#)"
---
type IX = [string, IX];
type IX2 = string;
type IX2 = IX2;
