packages/beff-core/tests/snapshots/print_parser__tests__ok_repro10.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        enum E {\n          A=\"A\",\n          B=\"B\"\n        };\n        export const ABC = {a: E.B, } as const satisfies Record<string, string>;\n        export type AllTs = (keyof typeof ABC);\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
type AllTs = "a";


type BuiltParsers = {
  AllTs: AllTs,
}
