packages/beff-core/tests/snapshots/print_parser__tests__ok_repro11.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        enum E {\n          A=\"A\",\n          B=\"B\"\n        };\n        const val = E.B as const;\n        export type AllTs = typeof val;\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
type AllTs = "B";


type BuiltParsers = {
  AllTs: AllTs,
}
