packages/beff-core/tests/snapshots/print_parser__tests__ok_repro13.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        const val = {a: 1} as const;\n        const spread = {...val, b: 2} as const;\n        export type AllTs = typeof spread;\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
--- entry.ts ---
const val = {a: 1} as const;
const spread = {...val, b: 2} as const;
export type AllTs = typeof spread;

parse.buildParsers<{ AllTs: AllTs }>();
--------------------------------
type AllTs = { "a": 1, "b": 2 };


type BuiltParsers = {
  AllTs: AllTs,
}
